--- a/user_css/main.css
+++ b/user_css/main.css
@@ -4,10 +4,11 @@
 |-----------------------------------------
  */
 
-html, body {
+html,
+body {
     font-family: Open Sans, Arial, sans-serif;
     height: 100%;
-    width:100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     background: #000;
@@ -22,7 +23,7 @@ html, body {
 }
 
 /* reset all list items */
-ul{
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -34,7 +35,7 @@ ul{
 }
 
 #main {
-    position:absolute;
+    position: absolute;
     top: 0px;
     left: 0px;
     right: 0px;
@@ -115,25 +116,29 @@ div#menu {
     flex-wrap: wrap;
     width: 100%;
     background: #fff;
-    border-bottom: 1px solid rgba(0,0,0,.1);
-    transition: .3s ease;
-	cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    transition: 0.3s ease;
+    cursor: pointer;
 }
 
 /* auto hide menu while playing */
-.playing .menu{opacity: 0;}
-.playing .menu:hover{opacity: 0.9;}
+.playing .menu {
+    opacity: 0;
+}
+.playing .menu:hover {
+    opacity: 0.9;
+}
 
 /* sub level menu */
-.menu ul{
+.menu ul {
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    top:100%;
-    left:0;
+    top: 100%;
+    left: 0;
     background-color: rgb(245, 245, 245);
-    box-shadow: 0 5px 10px 0 rgba(0,0,0,.1);
-    transition: .3s ease;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+    transition: 0.3s ease;
     z-index: 1;
 }
 
@@ -142,31 +147,31 @@ li.hide {
 }
 
 /* bottom level nav */
-.menu ul ul{
-    top:0;
+.menu ul ul {
+    top: 0;
     left: 100%;
 }
 
 #menu_top li {
-    padding: .7em 1em;
+    padding: 0.7em 1em;
 }
 
 .menu ul li {
-    padding: .3em 1em !important;
+    padding: 0.3em 1em !important;
 }
 
-.menu li{
+.menu li {
     white-space: nowrap;
     position: relative;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.menu li:hover{
-    background: rgba(0,0,0,.1);
+.menu li:hover {
+    background: rgba(0, 0, 0, 0.1);
 }
 
 /* show sub nav on hover */
-.menu li:hover > ul{
+.menu li:hover > ul {
     visibility: visible;
     opacity: 1;
 }
@@ -177,7 +182,7 @@ li.hide {
 |-----------------------------------------
  */
 
-.touch-controls{
+.touch-controls {
     display: flex;
     padding: 1em;
     position: absolute;
@@ -186,10 +191,10 @@ li.hide {
     right: 0px;
 }
 
-.touch-controls button{
+.touch-controls button {
     display: inline-block;
     -webkit-appearance: none;
-    border:0;
+    border: 0;
     outline: 0;
     background: #fff;
     opacity: 0.7;
@@ -198,32 +203,33 @@ li.hide {
     line-height: 3em;
     text-align: center;
     cursor: pointer;
-    transition: .1s ease;
-    margin:.5em;
+    transition: 0.1s ease;
+    margin: 0.5em;
 }
 
-.touch-controls button:active{
+.touch-controls button:active {
     transform: scale(0.95);
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.4) inset;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4) inset;
 }
 
-.touch-dpad, .touch-buttons{
+.touch-dpad,
+.touch-buttons {
     flex-grow: 1;
     text-align: center;
 }
 
-.touch-buttons{
+.touch-buttons {
     align-self: flex-end;
 }
 
-.touch-dpad--up{
+.touch-dpad--up {
     flex-grow: 1;
     width: 100%;
 }
 
 /* Only show controls on portrait mode screens */
 @media screen and (min-aspect-ratio: 1/1) {
-    .touch-controls{
+    .touch-controls {
         display: none;
     }
     #main {
